--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,13 +8,13 @@
 
     {# Bloc gauche :Texte #}
     <div class="profile_text">
-        <h1>Bonjour,je suis<span class="highlight">Willi</span></h1>
-        <h2>Developpeur Web & Technicien support IT </h2>
-        <p>Je suis enthousiaste à l'idée de mettre en pratique mes compétences en développement web et désireux de rejoindre un environnement de travail dynamique comme le vôtre.”</p>
+        <h1>Hello ! ,My name is <span class="highlight">Willi METY</span></h1>
+        <h2>Web developer & Technicien support IT </h2>
+        <p>"Je déploie mes compétences au service de vos projets , du code à l'infrastructure.je combine une polyvalence forgée sur le terrain et une expertise technique affûtée pour garantir la performance de vos systèmes.Fort de ce double expertise , je suis votre atout stratégique pour des solutions et un dépannage efficace, prêt à intervenir sur tous les fronts.”</p>
         <button class="read_more">read more</button>
     </div>
 
-    {# Bloc droite:Photo+Contact #}
+    {# Bloc droite:Photo+Contact #} 
 
 
     <div class="contact_info">
