--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,16 +2,17 @@
 
 {% block title %}Register{% endblock %}
 
+
 {% block body %}
+<br><br><br><br>
     <h1>Register</h1>
 
     {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
+    {{ form_start(registrationForm,{'attr':{'class':'form-container'}}) }}
         {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+        {{ form_row(registrationForm.plainPassword, {label: 'Password'}) }}
+        
         {{ form_row(registrationForm.agreeTerms) }}
 
         <button type="submit" class="btn">Register</button>
