--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -75,8 +75,8 @@
         }
 
         .thumbnails img {
-            width: 60px;
-            height: 70px;
+            width: 20%;
+            height:auto;
             object-fit: cover;
             cursor: pointer;
             border: 2px solid transparent;
